[package]
name = "wheel-resample"
version = "0.1.1"
authors = ["Fredrik Jansson <fredrik.jansson.se@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fredrik-jansson-se/wheel-resample"
description = "Library for weighted sampling"
documentation = "https://docs.rs/wheel-resample"
keywords = ["re-sample", "sample"]

[dependencies]
num-traits = "0.2"
rand = "0.7"
rand_distr= "0.2"
